# instaffo-case-study

./: docker-compose.yml  pyproject.toml
documentation/: README.md  coverage.txt
es_lib/: elastic_search_client.py
search_recommend_api/: Dockerfile  config.py  main.py  requirements.txt
search_recommend_api/model/: candidate.py  filters.py  job.py  recommendation_response.py
search_recommend_api/router/: __init__.py  candidates.py  index.py  jobs.py
tests/: Dockerfile  test_api.py
